--- a/frontend/src/app/components/empresas/empresas.component.html
+++ b/frontend/src/app/components/empresas/empresas.component.html
@@ -244,7 +244,7 @@
                     <td mat-cell *matCellDef="let empresa" class="table-cell">
                         <div class="cell-content">
                             <mat-chip-set>
-                                <mat-chip color="warn" selected>{{ empresa.rutas?.length || 0 }}</mat-chip>
+                                <mat-chip color="warn" selected>{{ empresa.rutasAutorizadasIds?.length || 0 }}</mat-chip>
                             </mat-chip-set>
                             <button mat-icon-button size="small" (click)="verRutasEmpresa(empresa)"
                                 matTooltip="VER RUTAS DE LA EMPRESA" class="ruta-button">
